--- a/style.css
+++ b/style.css
@@ -79,11 +79,10 @@
 footer {
     background-color: #526899;
     text-align: left;
-    padding-left: 25px;
+    padding: 20px 20px 20px 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: antiquewhite;
 }
-
 
 @media only screen and (max-width: 767px) {
     [class*="col-"]{
